--- a/TodoApp/Views/Home/error.cshtml
+++ b/TodoApp/Views/Home/error.cshtml
@@ -1,4 +1,4 @@
-﻿<a href="https://codepen.io/uiswarup/pen/qBebRpq" target="_blank">
+<a href="/Task/index" target="_blank">
         <link rel="stylesheet" href="~/css/error.css">
 
     <header class="top-header">
@@ -33,7 +33,7 @@
                 <p class="message__text">We're sorry, the page you were looking for isn't found here. The link you followed may either be broken or no longer exists. Please try again, or take a look at our.</p>
             </div>
             <div class="error__nav e-nav">
-                <a href="/Home/index" target="_blanck" class="e-nav__link"></a>
+                <a href="/Home/index" ></a>
             </div>
         </div>
         <!-- END Content -->
